# pile

./: .gitignore  README.md  app.py  controlnet_processor.py  index.html  index.js  process_image.py  process_raster.py  pyproject.toml  requirements.txt  vis.html
.devcontainer/: devcontainer.json
assets/geometry/pointcloud/: pile1.json
core/: animation-registry.js  geometry-registry.js  index.js  novel-viewer.js  scene-viewer.js  scene.js  viewer.js
effects/geometry/animations/: falling.js  waterfall.js
effects/geometry/extractors/: lineart_processor.py  pointcloud_processor.py
effects/geometry/types/: lineart.js  pointcloud.js
effects/image/animations/: fadein.js  panzoom.js
effects/text/animations/: slidestack.js
novels/: novel-schema.js  test.json  test2.json
novels/configs/: pile-full.json
scenes/configs/: fallingtest.json  page1.json  page2.json  page3.json  page4.json  page5.json  page6.json  scene1.json  scene2.json  scene3.json  test.json
schemas/: index.js  scene.js
schemas/animations/: geometry.js  image.js  text.js
schemas/geometry/: index.js
templates/: index.html  novel.html  viewer.html
tools/: animation-schemas.js  config-tool.js  config.html  novel-config.html  novel-config.js  scene-config.html  scene-config.js
