[project]
name = "pile"
version = "0.1.0"
description = "Your project description"
requires-python = ">=3.12"
dependencies = [
    "controlnet-aux",
    "Flask",
    "opencv-python",
    "numpy",
    "torch",
    "torchvision",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."] 